--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,17 +7,20 @@
 
     <fragment
         android:id="@+id/characterFragment"
-        android:name="com.example.a5month2dz.ui.fragments.CharacterFragment"
+        android:name="com.example.a5month2dz.ui.fragments.character.CharacterFragment"
         android:label="fragment_character"
         tools:layout="@layout/fragment_character" />
+
     <fragment
         android:id="@+id/episodeFragment"
-        android:name="com.example.a5month2dz.ui.fragments.EpisodeFragment"
+        android:name="com.example.a5month2dz.ui.fragments.episode.EpisodeFragment"
         android:label="fragment_episode"
         tools:layout="@layout/fragment_episode" />
+
     <fragment
         android:id="@+id/locationFragment"
-        android:name="com.example.a5month2dz.ui.fragments.LocationFragment"
+        android:name="com.example.a5month2dz.ui.fragments.location.LocationFragment"
         android:label="fragment_location"
         tools:layout="@layout/fragment_location" />
+
 </navigation>
