--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#25252E"
-    tools:context=".ui.fragments.LocationFragment">
+    tools:context=".ui.fragments.location.LocationFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_location"
