--- a/app/src/main/res/layout/fragment_detail_character.xml
+++ b/app/src/main/res/layout/fragment_detail_character.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#25252E"
-    tools:context=".ui.fragments.detail.DetailCharacterFragment">
+    tools:context=".ui.fragments.character.detail.DetailCharacterFragment">
 
     <ImageView
         android:layout_width="match_parent"
