--- a/app/src/main/res/layout/fragment_detail_location.xml
+++ b/app/src/main/res/layout/fragment_detail_location.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#25252E"
-    tools:context=".ui.fragments.detail.DetailLocationFragment">
+    tools:context=".ui.fragments.location.detail.DetailLocationFragment">
 
     <TextView
         android:id="@+id/character_detail_id"
