--- a/app/src/main/res/layout/fragment_detail_character.xml
+++ b/app/src/main/res/layout/fragment_detail_character.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#25252E"
-    tools:context=".ui.fragments.character.detail.DetailCharacterFragment">
+    tools:context=".ui.fragments.character.detail.CharacterDetailFragment">
 
     <ImageView
+        android:id="@+id/image_detail"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:id="@+id/image_detail"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/character_detail_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="40sp"
-        android:textColor="@color/black"
         android:layout_marginTop="30dp"
-        tools:text="100"
-        app:layout_constraintTop_toBottomOf="@id/image_detail"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/image_detail"
+        tools:text="100" />
+
     <TextView
         android:id="@+id/character_detail_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="26sp"
-        tools:text="NAME"
-        android:textStyle="bold"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:textColor="@color/black"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf= "@id/character_detail_id"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/character_detail_id"
+        tools:text="NAME" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
