--- a/app/src/main/res/layout/fragment_detail_location.xml
+++ b/app/src/main/res/layout/fragment_detail_location.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#25252E"
-    tools:context=".ui.fragments.location.detail.DetailLocationFragment">
+    tools:context=".ui.fragments.location.detail.LocationDetailFragment">
 
     <TextView
-        android:id="@+id/character_detail_id"
+        android:id="@+id/location_detail_dimension"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -22,7 +22,7 @@
         tools:text="100" />
 
     <TextView
-        android:id="@+id/character_detail_name"
+        android:id="@+id/location_detail_created"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -32,7 +32,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_detail_id"
+        app:layout_constraintTop_toBottomOf="@id/location_detail_dimension"
         tools:text="NAME" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
