--- a/app/src/main/res/layout/item_episode.xml
+++ b/app/src/main/res/layout/item_episode.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
